--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: left;
-    font-family: Arial;
+    font-family: Courier;
     color: #333;
     font-size: 16px;
 }
@@ -12,7 +12,7 @@ body{
     border: 1px solid #DDD;
     margin: 0 auto;
 }
-
+ 
 #container h1{
     font-size: 20px;
 }
